postcss/testData/inspections/media/mediaFeatureCustomIncorrect.pcss
@media (<error descr="Unknown media feature '--my-media'">--my-media</error> > 0px){}